# mc3d-trecsim

./: .gitignore  LICENSE  README.md  requirements.txt  run.py
.github/workflows/: ctest_gmm_cpp_implementation.yml
examples/: calibration_config.yaml  live_streams_config.yaml  video_config.yaml
examples/three_people/: calibrated_cameras_data.yml  configuration.yaml
gmm/: .gitignore  CMakeLists.txt
gmm/cmake/: config.h.in
gmm/include/: bspline.h  bspline_impl.h  camera.h  camera_impl.h  config.h  em.h  em_impl.h  frame.h  gmm.h  gmm_container.h  gmm_container_impl.h  gmm_impl.h  gmm_maximizer.h  gmm_maximizer_impl.h  gmm_param.h  hypothesis_manager.h  hypothesis_manager_impl.h  mc3d_common.h  mc3d_model.h  mc3d_model_impl.h  multivariate_normal.h  multivariate_normal_impl.h  normal.h  normal_impl.h  person_hypothesis.h  person_hypothesis_impl.h  pose_fusion.h  pose_id_measurement.h  pose_id_measurement_impl.h  pose_measurement.h  pose_parameter.h  spline_window.h  spline_window_impl.h  tensor_functions.h  tensor_functions_impl.h
gmm/src/: bindings.cpp  main.cpp
gmm/test/cpp/: CMakeLists.txt  camera_test.cpp  derivatives_test.cpp  gmm_test.cpp  mc3d_model_test.cpp  multivariate_normal_test.cpp  normal_test.cpp  person_hypothesis_test.cpp  spline_window_test.cpp
gmm/test/python/: bspline.py  pickle_test.py  tests.py
gmm/test_old/cpp/: bspline_test.cpp  camera_test.cpp  derivatives_test.cpp  hypothesis_manager_test.cpp  mc3d_model_test.cpp  multivariate_normal_test.cpp  test_double_shared.h  test_shared.h
gmm/test_old/python/: bspline.py
src/mc3d_trecsim/: args.py  buffer.py  calibration.py  config.py  derivative_testing.py  enums.py  interval.py  mc3d_types.py  measurement.py  measurement_visualizer.py  model.py  parallel_qt_visualizer.py  plotting.py  qt_visualizer.py  run_helpers.py  skeleton_calculator.py  undistort.py  video_streamer.py  video_writer.py  visualizer.py
torch_test/: CMakeLists.txt  example-app.cpp  test.ipynb
